# menaantony_tarea_ci-cd-package

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: .gitignore  ci.yml
.pytest_cache/: .gitignore
.pytest_cache/v/cache/: nodeids
tarea_ci_cd.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_app.py
